assets/scss/main.scss
@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,500,700|Chewy|);
@mixin prefix($property, $value, $prefixes: ()) {
  @each $prefix in $prefixes {
    #{'-' + $prefix + '-' + $property}: $value;
  }
  #{$property}: $value;
}
html,
body,
div,
header,
footer,
nav,
ul,
li,
section,
img,
h1,
h2,
h3,
h4,
h5,
p,
a,
input {
  margin: 0;
  border: 0;
  padding: 0;
  box-sizing: border-box;
  @include prefix(box-sizing, border-box, webkit moz);
}
/**********************************************
MAIN STYLES - MOBILE
***********************************************/
$mainGoldColor: #FFE800;
$navBorderColor: darken($mainGoldColor, 3%);
$navBarHeight: 2.2em;
$navBGColorHover: $navBorderColor;
$navBGColorActive: lighten($mainGoldColor, 20%);
$blurbBGcolor: lighten($mainGoldColor, 15%);
$grayBorderColor: #F4F4F4;
$linkColor: #4083BD;
$linkHoverColor: #00BE9D;
$blueColor: #00CFFF;

html {
  font-size: 20px;
}
body {
  font: {
    size: 100%;
    family: "Raleway", sans-serif;
    weight: 300;
  }
  letter-spacing: .1em;
}
ul {
  list-style-position: inside;
}
blockquote {
  border-left: 1em solid darken($mainGoldColor, 2%);
  border-right: 1em solid darken($mainGoldColor, 2%);
  margin: 0 2em;
  line-height: 1.5em;
  @include prefix(transition, 1s ease, webkit moz o);
  &:hover {
    @include prefix(transform, scale(1.2), webkit ms)
  }
  &:before,
  &:after {
    font-size: 4em;
    line-height: 0.1em;
    margin-right: 0.25em;
    vertical-align: -0.4em;
  }
  &:before {
    content: open-quote;
  }
  &:after {
    content: close-quote;
  }
}
/**********************************************
NAVIGATION and NAVIGATION LINKS
***********************************************/
nav {
  @include prefix(display, flex, webkit ms);
  @include prefix(display, flexbox, ms);
  @include prefix(display, box, webkit);
  @include prefix(flex-direction, column, webkit);
  @include prefix(justify-content, center, webkit);
  width: 100%;
  background-color: $mainGoldColor;
  font-variant: small-caps;
  position: fixed;
  a,
  a:hover,
  a:active,
  a:focus {
    text-decoration: none;
    color: black;
  }
  ul#brand-and-icon {
    list-style: none;
    @include prefix(display, flex, webkit ms);
    @include prefix(display, flexbox, ms);
    @include prefix(display, box, webkit);
    @include prefix(flex-direction, row, webkit);
    @include prefix(align-items, center, webkit);
    border-bottom: 0.05em solid $navBorderColor;
    height: $navBarHeight;
    img#menu-icon {
      width: 1.8em;
    }
  }
  div#nav-links {
    @include prefix(display, flex, webkit ms);
    @include prefix(display, flexbox, ms);
    @include prefix(display, box, webkit);
    @include prefix(flex-direction, column, webkit);
    @include prefix(align-items, center, webkit);
    a,
    a:hover,
    a:active,
    a:focus {
     padding: 0.25em;
     width: 100%;
     height: $navBarHeight;
     font-size: 1.3em;
     border-bottom: .05em solid $navBorderColor;
     text-decoration: none;
     color: black;
     text-align: center;
   }
   a {
     &:hover {
       cursor: pointer;
       font-weight: 500;
       background-color: $navBGColorHover;
       letter-spacing: 0.2em;
     }
     &:active {
       background-color: $navBGColorActive;
       border: none;
       letter-spacing: 0;
     }
    }
  } /* Ends div nav links */
} /* Ends NAV element */
/**********************************************
IMAGES - NAV
***********************************************/

/**********************************************
IMAGES - BODY
***********************************************/
img {
  &#heart {
    width: 0.75em;
  }
  &#resume {
    max-width: 33%;
  }
  &#tech {
    width: 75%;
    max-width: 250px;
    margin: 1em;
  }
}
/**********************************************
HEADINGS + REGULAR FONT
***********************************************/
/* Used for brand logo */
h1 {
  font: {
    size: 1.8em;
    family: "Chewy", cursive;
    weight: 400;
  }
  padding: .2em;
  letter-spacing: .2em;
  a,
  a:visited,
  a:focus {
    color: black;
    &:hover {
      font-weight: bolder;
      cursor: pointer;
      letter-spacing: 0.3em;
    }
  }
}
/* Used for short blurb under profile picture */
h2 {
  font: {
    size: 1em;
    weight: 500;
  }
  max-width: 60%;
  margin: 0 auto;
  padding-bottom: 1em;
}
/* Used for brand statement, which is hidden in mobile */
h3 {
  display: none;
}
/* Used for section subtitles */
h4 {
  font: {
    family: "Chewy", cursive;
    size: 2.5em;
    weight: 600;
  }
  margin: {
    top: .5em;
    bottom: .5em;
  }
  letter-spacing: .1em;
  text-align: center;
  max-width: 100%;
}
/* Used for regular paragraph fonts */
section p {
  font-size: 1em;
  line-height: 1.5;
  text-align: center;
  margin-bottom: 1em;
}

.small-font {
  font-size: 0.8em;
}
/**********************************************
PIC AND BLURBS
***********************************************/
div.image-blurbs {
  text-align: center;
  img#me {
    max-width: 50%;
    margin-bottom: 1.2em;
    border: 2px solid black;
    @include prefix(border-radius, 100%, webkit moz);
  }
}
div.image-blurbs-scoot {
  width: 100%;
  padding-top: 3em;
  background-color: $blurbBGcolor;
}
/**********************************************
SECTIONS AND PARAGRAPHS
***********************************************/
section {
  width: 100%;
  // border: 1px solid red;
  padding: 1em;
  text-align: center;
  border-bottom: 2px solid $grayBorderColor;
}
/**********************************************
ALL LINKS
***********************************************/
a,
a:hover,
a:active,
a:visited,
a:focus {
  text-decoration: none;
}
a,
a:hover,
a:visited {
  color: #4FB3C0;
}
/**********************************************
PROJECTS
***********************************************/
/* Used for project descriptions */
div.all-cards {
  @include prefix(display, flex, webkit ms);
  @include prefix(display, flexbox, ms);
  @include prefix(display, box, webkit);
  @include prefix(flex-direction, row, webkit);
  @include prefix(flex-wrap, wrap, moz webkit);
  @include prefix(justify-content, space-around, moz webkit);
}
div.card-wrapper {
  max-width: 29%;
  margin: 2em 2%;
  min-width: 250px;
  box-shadow: .1em .1em 10px gray;
  @include prefix(display, flex, webkit ms);
  @include prefix(display, flexbox, ms);
  @include prefix(display, box, webkit);
  @include prefix(flex-direction, column, webkit);
  @include prefix(justify-content, stretch, moz webkit);
  // align-items: stretch;
  // align-content: stretch;
  h5 {
    font: {
      size: 100%;
      family: "Chewy", cursive;
    }
    color: black;
    width: 100%;
    letter-spacing: .2em;
  }
  a {
    color: #A24604;
    &:hover {
      color: lighten(#A24604, 15%);
    }
  }
  div.title {
    padding: .5em;
    width: 100%;
    background-color: lighten($mainGoldColor, 2%);
  }
  span.sites {
    font-size: .7em;
  }
  div.project-image {
    text-align: center;
    width: 100%;
    height: 150px;
    overflow: hidden;
    img {
      min-height: 150px;
      width: 100%;
    }
  }
  div.description-container {
    padding: .2em;
    max-width: 100%;
    font-size: .7em;
    @include prefix(display, flex, webkit ms);
    @include prefix(display, flexbox, ms);
    @include prefix(display, box, webkit);
    @include prefix(flex-direction, column-reverse, webkit);
    @include prefix(align-content, space-around, webkit);
    @include prefix(align-items, stretch, webkit);
    flex-grow: 2;
    div.languages {
      text-align: left;
      font-size: .7em;
      margin-bottom: auto;
      padding: 1em;
      margin-top: 0.8em;
    }
    div.description {
      max-width: 100%;
      padding: 1em;
      p {
        text-align: justify;
        font-size: .8em;
      }
    }
  }
} /* Ends div card wrapper */
/**********************************************
CONTAINERS AND DIVS
***********************************************/
div.container-fluid {
  padding: 0;
  max-width: 1500px;
}
/**********************************************
RESUME & CONTACT
***********************************************/
ul {
  font-size: .8em;
}
/**********************************************
FOOTER
***********************************************/
footer {
  width: 100%;
  background-color: #FFE800;
  font-size: 0.6em;
  padding: 0.5em;
}
/*************************************/
/* WHEN THE SCREEN IS LARGE: > 650px */
/*************************************/
@media (min-width: 651px) {
  nav {
    display: flex;
    display: -webkit-flex;
    flex-direction: row;
    -webkit-flex-direction: row;
    align-items: center;
  }
  ul#brand-and-icon,
  div#nav-links a {
    border: none;
  }
  div#nav-links a:hover {
    color: $linkHoverColor;
  }
  nav a {
    margin-right: 20px;
  }
  section#about-me {
    max-width: 75%;
    margin: 0 auto;
    text-align: left;
    line-height: 45px;
  }
  a.resume {
    margin-right: auto;
  }
  div.blurb,
  blockquote,
  blockquote:before {
    display: inline-block;
  }
  div.container {
    margin: 0;
  }
  h3 {
    display: inline-block;
    font-weight: 500;
  }
  label#menu-icon {
    display: none;
  }
  img#me {
    width: 150px;
  }
  h2#blurb {
    font-size: 1.5em;
  }
  div.image-blurbs {
    width: 100%;
    text-align: center;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
  }
  div.blurb {
    max-width: 50%;
    align-self: center;
    display: none;
  }
}
/* ends @media */
/*************************************
HAMBURER MENU CLICK FUNCTIONALITY
*************************************/
input[type=checkbox] {
  display: none;
}
  #toggle + div#nav-links {
    overflow: hidden;
    @include prefix(transition, max-height .2s ease, webkit moz o);
    max-height: 0;
  }
  #toggle:checked + div#nav-links {
    max-height: $navBarHeight * 4;
  }
  .scootDown {
    margin-top: $navBarHeight * 4;
  }
  ul li.icon {
    margin-right: auto;
  }
  div.container {
    max-width: 100%;
    @include prefix(transition, all .2s ease, webkit moz o)
  }

